Add link for fb & github

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">ABOUT</h2>
                         <p class="text-white-50">
-                            I am a Computer Engineering graduate, I love playing basketball, dota and mobile legend. I am also a builder of mikrotik base piso wifi using html and css, that's why i want to learn html and css.
+                            I am currently enrolled in a Web Development Bootcamp at Kodego and aspires to be a future Full-Stack Developer. This website serves as a First Portfolio project using HTML, CSS and Boostrap.
                         </p>
                             <a class="btn btn-primary" href="assets/resume.html" target="_blank">View resume.</a>
                             
@@ -192,8 +192,8 @@
                 </div>
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://www.facebook.com/dave.querikiol.39/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="https://github.com/daveq03" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
